--- a/ai-app/docker-compose.yml
+++ b/ai-app/docker-compose.yml
@@ -3,14 +3,14 @@ version: '3.8'
 services:
   postgres:
     image: postgres:15-alpine
-    container_name: resume_screening_db
+    container_name: vnf_db
     restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: resume_db
+      POSTGRES_PASSWORD: admin@123
+      POSTGRES_DB: vnf_ops_dev
     ports:
-      - "5432:5432"
+      - "5434:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
